  which in turn speeds up the process a fair bit.
o Now getSegments(..., splitters=TRUE) for CBS and PSCBS inserts NA
  rows whereever there is a "gap" between segments.  A "gap" is when
  two segments are not connected (zero distance).
o ROBUSTNESS: Now append() for CBS and PSCBS drops column 'length'
  from 'knownSegments', iff it exists.
o BUG FIX: seqOfSegmentsByDP() for AbstractCBS would not handle empty
  segments, which could occur if 'knownSegments' for instance included
  centromere gaps.
o BUG FIX: segmentByCBS(... knownSegments) could return segments for 
  chromosome 0 even though it did not exist in the input data.


Version: 0.29.2 [2012-09-18]
o REPORT: Now report() for AbstractCBS looks for the RSP template in 
  templates/, and as a backup in templates,PSCBS/.  If the latter does 
  not exist, it is automatically created as a soft link to templates/ 
  of the PSCBS package.  This allows anyone to create their own 
  customized copy (in templates/) of the default PSCBS RSP report.
o REPORT: Now report(fit, ..., rspTags) for AbstractCBS looks for the 
  RSP template named <className>(,<rspTags>),report.tex.rsp, where
  className is class(fit)[1] and  argument 'rspTags' is an optional
  comma-separated character string/vector.  This makes it possible
  to have different types of report for the same class of objects.
o REPORT: Added argument 'force' to report() for AbstractCBS.  This 
  will copy the RSP template files again, although they are already 
  in reports/ output directory.


Version: 0.29.1 [2012-09-15]
o Added argument 'dropMissingCT' to segmentByPairedPSCBS().


Version: 0.29.0 [2012-09-14]
o Added trial version of pruneByDP() for AbstractCBS.


Version: 0.28.6 [2012-09-13]
o Now tileChromosomes() also adjusts 'knownSegments'.
o Added argument 'dropGaps' to gapsToSegments().
o Updated all.equal() for AbstractCBS to compare locus-level data,
  segments, and other fields.


Version: 0.28.5 [2012-09-13]